--- a/app/index.html
+++ b/app/index.html
@@ -24,9 +24,9 @@
     h3 {
         display: inline-block;
     }
-    #container {
+    /* #container {
         display: none;
-    }
+    } */
     #container-edit {
         display: none;
     }
